--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="content">
 
         <section>
-            <div class="search-engine-optimization">
+            <div id="search-engine-optimization" class="search-engine-optimization">
                 <img src="./assets/images/search-engine-optimization.jpg" alt="search engine optimization" class="float-left" />
                 <h2>Search Engine Optimization</h2>
                 <p>
