--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
         <section>
 
-            <div class="benefit-lead">
+            <div class="benefit">
                 <h3>Lead Generation</h3>
                 <img src="./assets/images/lead-generation.png" alt="lead generation" />
                 <p>
@@ -78,7 +78,7 @@
         </section>
 
         <section>
-            <div class="benefit-brand">
+            <div class="benefit">
                 <h3>Brand Awareness</h3>
                 <img src="./assets/images/brand-awareness.png" alt="brand awareness"/>
                 <p>
@@ -88,7 +88,7 @@
         </section>
 
         <section>
-            <div class="benefit-cost">
+            <div class="benefit">
                 <h3>Cost Management</h3>
                 <img src="./assets/images/cost-management.png" alt="cost management" />
                 <p>
