--- a/devolop/index.html
+++ b/devolop/index.html
@@ -30,10 +30,10 @@
 
     <div class="hero"></div>
 
-    <div class="content">
+    <div class="contents">
 
         <section>
-            <div class="search-engine-optimization">
+            <div id="search-engine-optimization" class="content">
                 <img src="./assets/images/search-engine-optimization.jpg" alt="search engine optimization" class="float-left" />
                 <h2>Search Engine Optimization</h2>
                 <p>
@@ -43,7 +43,7 @@
         </section>
 
         <section>
-            <div id="online-reputation-management" class="online-reputation-management">
+            <div id="online-reputation-management" class="content">
                 <img src="./assets/images/online-reputation-management.jpg" alt="reputation management" class="float-right" />
                 <h2>Online Reputation Management</h2>
                 <p>
@@ -53,7 +53,7 @@
         </section>
 
         <section>
-            <div id="social-media-marketing" class="social-media-marketing">
+            <div id="social-media-marketing" class="content">
                 <img src="./assets/images/social-media-marketing.jpg" alt="social media" class="float-left" />
                 <h2>Social Media Marketing</h2>
                 <p>
@@ -68,7 +68,7 @@
 
         <section>
 
-            <div class="benefit-lead">
+            <div class="benefit">
                 <h3>Lead Generation</h3>
                 <img src="./assets/images/lead-generation.png" alt="lead generation" />
                 <p>
@@ -78,7 +78,7 @@
         </section>
 
         <section>
-            <div class="benefit-brand">
+            <div class="benefit">
                 <h3>Brand Awareness</h3>
                 <img src="./assets/images/brand-awareness.png" alt="brand awareness"/>
                 <p>
@@ -88,7 +88,7 @@
         </section>
 
         <section>
-            <div class="benefit-cost">
+            <div class="benefit">
                 <h3>Cost Management</h3>
                 <img src="./assets/images/cost-management.png" alt="cost management" />
                 <p>
